Fixing z-index issue

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -26,7 +26,6 @@ atom-text-editor, atom-text-editor::shadow {
 
   .gutter {
       overflow: visible;
-      z-index: 2;
   }
 
   .gutter.drop-shadow {
