--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -15,7 +15,7 @@
   border-bottom: solid 1px #a2a2a2;
   overflow-x: auto;
   overflow-y: hidden;
-  z-index: 3;
+  z-index: 2;
 
   &::-webkit-scrollbar {
     display: none;
